2007-05-25  Akim Demaille  <demaille@gostai.com>

	Support arithmetics with OpExp
	* src/ast/ast.yml (BinaryExp): Use lhs and rhs, not left and right.
	(OpExp): Derive from BinaryExp.
	Rename "Oper" occurrences as "type".
	* dev/ast_params.py: Adjust.
	* src/parser/bison/ugrammar.y (new_exp): Adjust to using ast::OpExp.

2007-05-22  Akim Demaille  <akim.demaille@free.fr>

	Bind "return"
	* src/ast/all.hh: Include all the *-exp.hh headers.
	* src/parser/bison/ugrammar.y (expr.opt): New.
	Activate the code for "return".
	NUM -> "number".

2007-05-22  Akim Demaille  <akim.demaille@free.fr>

	Activate some rules
	* src/parser/bison/ugrammar.y: <command> -> <expr>.
	instruction -> statement.
	Use new_bin.

2007-05-22  Akim Demaille  <akim.demaille@free.fr>

	Make it linkable
	* src/Makefile.am: Link libast into libkernel.

2007-05-22  Akim Demaille  <akim.demaille@free.fr>

	Make it compilable
	* src/ast/all.hh: Include all the headers we need.
	* src/parser/bison/ugrammar.y: Disable all the actions.
	For the time being, this is still the old grammar, nothing
	was changed.
	Many simplifications are needed.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	Take into account the comment on the ast
	* src/ast/ast.yml (Cmd): Remove, use only Exp.
	Adjust all *Cmd into *Exp.
	(BinaryExp): New, to factor AndExp, SemicolonExp etc.
	* dev/ast_params.py: Adjust.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	Make it compile
	* src/ast/ast.yml (MapExp, ClassDec): Comment out so that it
	compiles.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	Make ast generation more robust, and more alike tc's
	* dev/ast_params.py (deep_clear): New.
	* dev/ast-clone-visitor-gen, dev/ast-graph-gen, dev/ast-nodes-gen,
	* dev/ast-readme-gen, dev/ast-visitor-gen, dev/ast.py, dev/tools.py:
	Use it.
	Update with current version in tc.
	Make it (slightly) more generic.
	(node.final): Rename as...
	(node.concrete): this.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	ast.yml fixes